feat: add warp10 buffer flush into database

--- a/configurations/warp10.html
+++ b/configurations/warp10.html
@@ -29,7 +29,7 @@
 <script type="text/html" data-template-name="warp10">
   <div class="form-row">
     <label for="node-config-input-endpoint"><i class="fa fa-plug"></i> Endpoint</label>
-    <input type="text" id="node-config-input-endpoint" placeholder="http://my.endpoint/api/v0/update">
+    <input type="text" id="node-config-input-endpoint" placeholder="https://sandbox.senx.io/api/v0">
   </div>
   <div class="form-row">
     <label for="node-config-input-token"><i class="fa fa-vcard"></i> Token</label>
@@ -41,7 +41,7 @@
   <p>A node for configuring warp10 connections.</p>
 
   <ul>
-    <li><strong>Endpoint</strong> : The endpoint used for warp10 ingestion with an HTTP POST request.</li>
-    <li><strong>Token</strong> : The token used for the request (into the <code>X-Warp10-Token</code> header).</li>
+    <li><strong>Endpoint</strong> : The endpoint used for warp10 data ingestion.</li>
+    <li><strong>Token</strong> : The token used for the request.</li>
   </ul>
 </script>
