docs: improve the warp10 config endpoint message

--- a/configurations/warp10.html
+++ b/configurations/warp10.html
@@ -41,7 +41,7 @@
   <p>A node for configuring warp10 connections.</p>
 
   <ul>
-    <li><strong>Endpoint</strong> : The endpoint used for warp10 data ingestion.</li>
+    <li><strong>Endpoint</strong> : The endpoint used for warp10 data ingestion, it should include the full URL to the version of your database but not the method. For example : <code>https://sandbox.senx.io/api/v0</code></li>
     <li><strong>Token</strong> : The token used for the request.</li>
   </ul>
 </script>
